# STASC

./: CMakeLists.txt  README.md
DOCS/html/: _o_d_e_8cc.html  _o_d_e_8cc_source.html  dir_15e3b52c8f80eae14cb5a38e3a338f76.html  dir_354a23e55fc97d8cd37cf29e86d16b04.html  files.html  globals.html  globals_func.html  index.html  main_8cc.html  main_8cc_source.html  namespace_s_t_a_s_c.html  namespacemembers.html  namespacemembers_func.html  namespaces.html
DOCS/html/search/: all_0.js  all_1.js  all_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  namespaces_0.js  searchdata.js
DOCS/latex/: _o_d_e_8cc.tex  dir_15e3b52c8f80eae14cb5a38e3a338f76.tex  dir_354a23e55fc97d8cd37cf29e86d16b04.tex  files.tex  main_8cc.tex  namespace_s_t_a_s_c.tex  namespaces.tex  refman.tex
assign1/: CMakeLists.txt
assign1/include/: ODE.h  sysFunc.h
assign1/src/: ODE.cc  main.cc
